[package]
name = "custom-wkt"
version = "0.1.1"
edition = "2018"
authors = ["erik.langenborg@gmail.com"]
license = "MIT"
readme = "README.md"

[lib]
name = "custom_wkt"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13"
ndarray = "0.15.3"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
requires-python = ">=3.7"
requires-dist = ["numpy>=1.16.0"]
